Revert "LinkedList -> ArrayList"
This reverts commit c22aae92bc36fe9d18898f678d6150deeb2b98e4.